--- a/package.json
+++ b/package.json
@@ -1,10 +1,17 @@
 {
+  "name": "p1-screening-pdf-js",
+  "version": "1.0.0",
+  "description": "Aplikasi janji temu dengan Supabase",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
-    "@supabase/supabase-js": "^2.55.0",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0"
+    "@supabase/supabase-js": "^2.39.3",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   }
 }
